# llm_echo

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  README_JULES.md  config.example.yaml  example_usage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.py
.github/: PROVENANCE_SCHEMA.json
.github/PROVENANCE/: 10734cc2-52ef-4316-b3b2-178e347088d5-bundle.json  22af4ebe-9502-4eba-bb05-35ff4a17b4ea-bundle.json  3dca3c1c-e9ca-404f-a031-19b7a0aae7c3-bundle.json  (+5 more)
.github/workflows/: ci.yml  (+5 more)
agents/: argumentminer.py  citationdetector.py  claimcanonicalizer.py  claimdetector.py  contradiction_detector.py  factverifier.py  hallucination_auditor.py  nliadapter.py  provenance.py  stancedetector.py
docs/: DEEPSEEK_INTEGRATION.md  PR3_CHANGELOG.md  PR3_PLAN.md  generate_docs.py
ingestion/: heuristics.py  reddit_scraper.py  subreddits.json
jules/: __init__.py  cli.py
keywords/: expander.py
scripts/: jules_cli.py  parseqodoand_emit.py  pin-actions.sh  scrapeandemit.py
search/: deepseekadapter.py  mock_deepseek.py  verify.py
tests/: __init__.py  test_argumentminer.py  test_canonicalizer.py  test_citationdetector.py  test_claimdetector.py  test_contradictions.py  test_deepseekadapter.py  test_expander.py  test_factverifier.py  test_jules_cli.py  test_nliadapter.py  test_provenance.py  test_stancedetector.py  test_verify.py  testdeepseekproxy.py  testpipelinebundle_write.py  testprovenanceschema_compliance.py  testqodoreader.py
workflows/: mock_deepseek_mock.py  pipeline.py
(+30 files in other folders)
